--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "chitin",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "An interactive media framework for the browser",
-  "main": "index.js",
+  "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
